Add accent images in media list banners

--- a/app/src/main/res/layout/media_type_header_layout.xml
+++ b/app/src/main/res/layout/media_type_header_layout.xml
@@ -3,212 +3,232 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <RelativeLayout
-        android:id="@+id/type_header_parent"
+    <com.google.android.material.imageview.ShapeableImageView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="@dimen/material_generic_medium"
-        >
-        <ImageView
-            android:id="@+id/type_image"
-            android:layout_width="@dimen/fourty_eight_dp"
-            android:layout_height="@dimen/fourty_eight_dp"
-            android:layout_centerHorizontal="true"
-            />
-        <androidx.mediarouter.app.MediaRouteButton
-            android:id="@+id/media_route_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:mediaRouteTypes="user"
-            android:layout_marginLeft="@dimen/eight_dp"
-            android:layout_marginStart="@dimen/eight_dp"
-            android:layout_marginRight="@dimen/material_generic"
-            android:layout_marginEnd="@dimen/material_generic"
-            android:layout_alignParentEnd="true"
-            android:visibility="gone"
-            />
-    </RelativeLayout>
+        android:layout_height="match_parent"
+        android:scaleType="fitXY"
+        android:alpha="0.4"
+        app:shapeAppearanceOverlay="@style/roundedImageView"
+        />
+    <View
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="@drawable/fading_gradient_curved"
+        />
     <LinearLayout
-        android:id="@+id/infoLayoutParent"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_gravity="center_vertical"
-        android:layout_marginTop="@dimen/material_generic_medium"
-        android:layout_marginLeft="@dimen/material_generic"
-        android:layout_marginStart="@dimen/material_generic"
-        android:layout_marginRight="@dimen/material_generic"
-        android:layout_marginBottom="@dimen/material_generic"
+        android:layout_gravity="center_horizontal"
         >
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginBottom="@dimen/material_generic">
-            <TextView
-                android:id="@+id/usedSpaceTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:textAllCaps="true"
-                android:textColor="@color/white"
-                android:textSize="@dimen/twenty_four_sp"
-                />
-            <TextView
-                android:id="@+id/usedTotalSpaceTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:textAllCaps="true"
-                android:textColor="@color/white"
-                android:textSize="@dimen/twelve_sp"
-                android:layout_marginLeft="@dimen/four_dp"
-                />
-        </LinearLayout>
-        <LinearLayout
-            android:id="@+id/progressIndicatorsParent"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center_vertical"
-            >
-            <com.google.android.material.progressindicator.LinearProgressIndicator
-                android:id="@+id/mediaProgress"
-                android:layout_width="@dimen/zero_dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.8"
-                app:indicatorDirectionLinear="leftToRight"
-                app:indicatorColor="@color/white"
-                app:trackCornerRadius="@dimen/four_dp"
-                app:trackThickness="@dimen/eight_dp"
-                />
-            <TextView
-                android:id="@+id/progressPercentTextView"
-                android:layout_width="@dimen/zero_dp"
-                android:layout_height="wrap_content"
-                android:textSize="@dimen/sixteen_sp"
-                android:textColor="@color/white"
-                android:layout_marginLeft="@dimen/four_dp"
-                android:layout_marginStart="@dimen/four_dp"
-                android:layout_weight="0.2"
-                android:gravity="center_vertical"
-                />
-        </LinearLayout>
         <RelativeLayout
-            android:id="@+id/storageCountsParent"
+            android:id="@+id/type_header_parent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="@dimen/material_generic_medium"
             >
-            <TextView
-                android:id="@+id/itemsCountTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="@dimen/twelve_sp"
-                android:textColor="@color/white"
-                android:layout_alignParentStart="true"
+            <ImageView
+                android:id="@+id/type_image"
+                android:layout_width="@dimen/fourty_eight_dp"
+                android:layout_height="@dimen/fourty_eight_dp"
+                android:layout_centerHorizontal="true"
                 />
-            <TextView
-                android:id="@+id/internalStorageTextView"
+            <androidx.mediarouter.app.MediaRouteButton
+                android:id="@+id/media_route_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/twelve_sp"
-                android:textColor="@color/white"
+                android:mediaRouteTypes="user"
+                android:layout_marginLeft="@dimen/eight_dp"
+                android:layout_marginStart="@dimen/eight_dp"
                 android:layout_marginRight="@dimen/material_generic"
                 android:layout_marginEnd="@dimen/material_generic"
                 android:layout_alignParentEnd="true"
+                android:visibility="gone"
                 />
         </RelativeLayout>
-    </LinearLayout>
-    <LinearLayout
-        android:id="@+id/optionsParent"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="bottom|center_horizontal"
-        android:gravity="center_horizontal"
-        android:layout_marginTop="@dimen/material_generic_medium"
-        android:layout_marginBottom="@dimen/material_generic"
-        android:paddingLeft="@dimen/material_generic"
-        android:paddingRight="@dimen/material_generic"
-        android:weightSum="1"
-        >
-        <ImageView
-            android:id="@+id/index_image"
-            android:layout_width="@dimen/zero_dp"
+        <LinearLayout
+            android:id="@+id/infoLayoutParent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/ic_round_playlist_add_circle_32"
-            android:layout_weight="0.25"
-            />
-        <ImageView
-            android:id="@+id/switch_view"
-            android:layout_width="@dimen/zero_dp"
+            android:orientation="vertical"
+            android:layout_gravity="center_vertical"
+            android:layout_marginTop="@dimen/material_generic_medium"
+            android:layout_marginLeft="@dimen/material_generic"
+            android:layout_marginStart="@dimen/material_generic"
+            android:layout_marginRight="@dimen/material_generic"
+            android:layout_marginBottom="@dimen/material_generic"
+            >
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginBottom="@dimen/material_generic">
+                <TextView
+                    android:id="@+id/usedSpaceTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textStyle="bold"
+                    android:textAllCaps="true"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/twenty_four_sp"
+                    />
+                <TextView
+                    android:id="@+id/usedTotalSpaceTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textStyle="bold"
+                    android:textAllCaps="true"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/twelve_sp"
+                    android:layout_marginLeft="@dimen/four_dp"
+                    />
+            </LinearLayout>
+            <LinearLayout
+                android:id="@+id/progressIndicatorsParent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center_vertical"
+                >
+                <com.google.android.material.progressindicator.LinearProgressIndicator
+                    android:id="@+id/mediaProgress"
+                    android:layout_width="@dimen/zero_dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.8"
+                    app:indicatorDirectionLinear="leftToRight"
+                    app:indicatorColor="@color/white"
+                    app:trackCornerRadius="@dimen/four_dp"
+                    app:trackThickness="@dimen/eight_dp"
+                    />
+                <TextView
+                    android:id="@+id/progressPercentTextView"
+                    android:layout_width="@dimen/zero_dp"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/sixteen_sp"
+                    android:textColor="@color/white"
+                    android:layout_marginLeft="@dimen/four_dp"
+                    android:layout_marginStart="@dimen/four_dp"
+                    android:layout_weight="0.2"
+                    android:gravity="center_vertical"
+                    />
+            </LinearLayout>
+            <RelativeLayout
+                android:id="@+id/storageCountsParent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                >
+                <TextView
+                    android:id="@+id/itemsCountTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/twelve_sp"
+                    android:textColor="@color/white"
+                    android:layout_alignParentStart="true"
+                    />
+                <TextView
+                    android:id="@+id/internalStorageTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/twelve_sp"
+                    android:textColor="@color/white"
+                    android:layout_marginRight="@dimen/material_generic"
+                    android:layout_marginEnd="@dimen/material_generic"
+                    android:layout_alignParentEnd="true"
+                    />
+            </RelativeLayout>
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/optionsParent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/ic_round_grid_on_32"
-            android:layout_weight="0.25"
-            />
-        <ImageView
-            android:id="@+id/group_view"
-            android:layout_width="@dimen/zero_dp"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/ic_baseline_group_work_32"
-            android:layout_weight="0.25"
-            />
-        <ImageView
-            android:id="@+id/sort_view"
-            android:layout_width="@dimen/zero_dp"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/ic_round_sort_32"
-            android:layout_weight="0.25"
-            />
-    </LinearLayout>
+            android:orientation="horizontal"
+            android:layout_gravity="bottom|center_horizontal"
+            android:gravity="center_horizontal"
+            android:layout_marginTop="@dimen/material_generic_medium"
+            android:layout_marginBottom="@dimen/material_generic"
+            android:paddingLeft="@dimen/material_generic"
+            android:paddingRight="@dimen/material_generic"
+            android:weightSum="1"
+            >
+            <ImageView
+                android:id="@+id/index_image"
+                android:layout_width="@dimen/zero_dp"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/ic_round_playlist_add_circle_32"
+                android:layout_weight="0.25"
+                />
+            <ImageView
+                android:id="@+id/switch_view"
+                android:layout_width="@dimen/zero_dp"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/ic_round_grid_on_32"
+                android:layout_weight="0.25"
+                />
+            <ImageView
+                android:id="@+id/group_view"
+                android:layout_width="@dimen/zero_dp"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/ic_baseline_group_work_32"
+                android:layout_weight="0.25"
+                />
+            <ImageView
+                android:id="@+id/sort_view"
+                android:layout_width="@dimen/zero_dp"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/ic_round_sort_32"
+                android:layout_weight="0.25"
+                />
+        </LinearLayout>
 
-    <FrameLayout
-        android:id="@+id/options_recycler_view_parent"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="@dimen/eight_dp"
-        android:paddingRight="@dimen/eight_dp"
-        android:visibility="invisible"
-        >
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/options_recycler_view"
+        <FrameLayout
+            android:id="@+id/options_recycler_view_parent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="@dimen/eight_dp"
+            android:paddingRight="@dimen/eight_dp"
+            android:visibility="invisible"
+            >
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/options_recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/material_generic"
+                android:layout_marginBottom="@dimen/material_generic"
+                android:divider="@null"
+                android:scrollbars="none"
+                />
+            <View
+                android:layout_width="@dimen/material_generic"
+                android:layout_height="@dimen/sixty_four_dp"
+                android:layout_gravity="left"
+                android:background="@drawable/fading_gradient"
+                />
+            <!--<View
+                android:layout_width="@dimen/material_generic"
+                android:layout_height="@dimen/sixty_four_dp"
+                android:layout_gravity="right"
+                android:background="@drawable/fading_gradient_reverse"
+                />-->
+        </FrameLayout>
+
+        <HorizontalScrollView
+            android:id="@+id/options_list_scroll"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/material_generic"
             android:layout_marginBottom="@dimen/material_generic"
-            android:divider="@null"
-            android:scrollbars="none"
-            />
-        <View
-            android:layout_width="@dimen/material_generic"
-            android:layout_height="@dimen/sixty_four_dp"
-            android:layout_gravity="left"
-            android:background="@drawable/fading_gradient"
-            />
-        <View
-            android:layout_width="@dimen/material_generic"
-            android:layout_height="@dimen/sixty_four_dp"
-            android:layout_gravity="right"
-            android:background="@drawable/fading_gradient_reverse"
-            />
-    </FrameLayout>
-
-    <HorizontalScrollView
-        android:id="@+id/options_list_scroll"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/material_generic"
-        android:layout_marginBottom="@dimen/material_generic"
-        android:visibility="gone"
-        >
-        <LinearLayout
-            android:id="@+id/options_list_parent"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:visibility="gone"
             >
-            <!-- placeholder for dynamic elements -->
-        </LinearLayout>
-    </HorizontalScrollView>
+            <LinearLayout
+                android:id="@+id/options_list_parent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                >
+                <!-- placeholder for dynamic elements -->
+            </LinearLayout>
+        </HorizontalScrollView>
+    </LinearLayout>
 </merge>
