--- a/app/src/main/res/values-v23/themes.xml
+++ b/app/src/main/res/values-v23/themes.xml
@@ -16,5 +16,6 @@
         <item name="actionBarTheme">@style/ThemeOverlay.Actionbar</item>
 
         <item name="colorAccent">@color/highlight_yellow</item>
+        <item name="android:colorEdgeEffect">@color/highlight_yellow</item>
     </style>
 </resources>
