Persis brightness, volume level in video player, check file not found before media info operation

--- a/app/src/main/res/layout/media_type_header_layout.xml
+++ b/app/src/main/res/layout/media_type_header_layout.xml
@@ -6,7 +6,7 @@
     <com.google.android.material.imageview.ShapeableImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="fitXY"
+        android:scaleType="centerCrop"
         android:alpha="0.4"
         app:shapeAppearanceOverlay="@style/roundedImageView"
         />
