--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -83,7 +83,7 @@
         <item name="android:background">@color/black</item>
     </style>
 
-    <style name="Custom.Dialog.Dark" parent="Theme.AppCompat.DayNight.Dialog.Alert"/>
+    <style name="Custom.Dialog.Dark" parent="Theme.AppCompat.Dialog.Alert"/>
 
     <style name="roundedImageView" parent="">
         <item name="cornerFamily">rounded</item>
