--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -34,7 +34,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/six_dp"
-        android:text="@string/version"
+        android:text="@string/app_version"
         android:textSize="@dimen/eighteen_sp"
         android:textColor="@color/grey_color"
         app:layout_goneMarginTop="@dimen/eight_dp"
@@ -56,7 +56,7 @@
         app:layout_constraintRight_toRightOf="parent"
         />
     <TextView
-        android:id="@+id/open_source"
+        android:id="@+id/subscription_status"
         android:layout_width="@dimen/zero_dp"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/rights_reserved"
@@ -64,39 +64,15 @@
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="@dimen/material_generic_medium"
         android:textSize="@dimen/eighteen_sp"
-        android:textColor="@color/blue"
+        android:textColor="@color/white"
         android:text="@string/licenses"
         />
-    <TextView
-        android:id="@+id/privacy_policy"
-        android:layout_width="@dimen/zero_dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/open_source"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="@dimen/material_generic"
-        android:textSize="@dimen/eighteen_sp"
-        android:textColor="@color/blue"
-        android:text="@string/privacy_policy"
-        />
 
     <TextView
-        android:id="@+id/share_logs"
+        android:id="@+id/preprod_copy"
         android:layout_width="@dimen/zero_dp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/privacy_policy"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="@dimen/material_generic"
-        android:textSize="@dimen/eighteen_sp"
-        android:textColor="@color/blue"
-        android:text="@string/share_logs"
-        />
-
-    <TextView
-        android:layout_width="@dimen/zero_dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/share_logs"
+        app:layout_constraintTop_toBottomOf="@id/subscription_status"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -105,5 +81,20 @@
         android:layout_marginTop="@dimen/material_generic"
         android:textSize="@dimen/twelve_sp"
         android:text="@string/pre_production"
+        />
+
+    <TextView
+        android:layout_width="@dimen/zero_dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/preprod_copy"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:gravity="center_horizontal"
+        android:textColor="@color/white"
+        android:layout_marginTop="@dimen/material_generic"
+        android:textSize="@dimen/twelve_sp"
+        android:text="@string/made_in_india"
         />
 </androidx.constraintlayout.widget.ConstraintLayout>
