Trial checks at startup

--- a/app/src/main/res/xml/preferences_about.xml
+++ b/app/src/main/res/xml/preferences_about.xml
@@ -39,4 +39,8 @@
         app:key="open_source"
         app:title="@string/open_source_licenses"
         />
+    <Preference
+        app:key="subscription_status"
+        app:title="@string/subscription_status"
+        />
 </PreferenceScreen>
