Add trial offline threshold; fix video player backlit

--- a/app/src/main/res/layout/subtitles_search_view.xml
+++ b/app/src/main/res/layout/subtitles_search_view.xml
@@ -20,7 +20,7 @@
         />
     <AutoCompleteTextView
         android:id="@+id/movie_name_edit_text"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
