Migrate all dialogs to custom shaped dark style

--- a/app/src/main/res/layout/image_viewer_dialog_activity.xml
+++ b/app/src/main/res/layout/image_viewer_dialog_activity.xml
@@ -3,4 +3,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/fragment_container_view"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    android:layout_height="match_parent"
+    android:padding="@dimen/material_generic"
+    />
