--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -3,7 +3,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="@dimen/eight_dp"
+    android:padding="@dimen/material_generic"
     >
     <ImageView
         android:id="@+id/launcher_icon"
@@ -13,7 +13,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="@dimen/material_generic"
-        android:src="@mipmap/ic_launcher"
+        android:src="@mipmap/ic_launcher_normal"
         />
     <TextView
         android:id="@+id/team_amaze"
