--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -83,7 +83,10 @@
         <item name="android:background">@color/black</item>
     </style>
 
-    <style name="Custom.Dialog.Dark" parent="Theme.AppCompat.Dialog.Alert"/>
+    <style name="Custom.Dialog.Dark" parent="Theme.AppCompat.Dialog.Alert">
+        <item name="android:windowBackground">@drawable/background_curved_recents</item>
+        <item name="android:windowMinWidthMinor">85%</item>
+    </style>
 
     <style name="roundedImageView" parent="">
         <item name="cornerFamily">rounded</item>
