--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -17,7 +17,7 @@
         />
     <TextView
         android:id="@+id/team_amaze"
-        android:layout_width="@dimen/zero_dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/six_dp"
         android:text="@string/team_amaze"
@@ -26,7 +26,6 @@
         app:layout_goneMarginTop="@dimen/eight_dp"
         app:layout_constraintTop_toBottomOf="@id/launcher_icon"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         />
 
     <TextView
@@ -40,7 +39,6 @@
         app:layout_goneMarginTop="@dimen/eight_dp"
         app:layout_constraintTop_toBottomOf="@id/team_amaze"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         />
     <TextView
         android:id="@+id/rights_reserved"
@@ -53,7 +51,6 @@
         app:layout_goneMarginTop="@dimen/eight_dp"
         app:layout_constraintTop_toBottomOf="@id/version"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         />
 
     <!--<TextView
