--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -11,6 +11,7 @@
         <item name="colorOnSecondary">@color/blue</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:navigationBarColor" tools:targetApi="l">@color/yellow_dark</item>
         <!-- Customize your theme here. -->
         <item name="actionBarTheme">@style/ThemeOverlay.Actionbar</item>
         <item name="colorAccent">@color/highlight_yellow</item>
@@ -27,6 +28,7 @@
         <item name="colorOnSecondary">@color/blue</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:navigationBarColor" tools:targetApi="l">@color/yellow_dark</item>
         <!-- Customize your theme here. -->
         <item name="actionBarTheme">@style/ThemeOverlay.Actionbar</item>
         <item name="colorAccent">@color/highlight_yellow</item>
